fix overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,9 +7,11 @@ html {
 html,
 body {
   width: 100%;
+  height: 100vh;
 }
 .container {
   width: 100%;
+  height: 100vh;
   /* padding-right: 15px;
   padding-left: 15px; */
   margin-right: auto;
